# surfacestreams

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  KinectAzure.cpp  KinectAzure.h  Makefile  Protonect.cpp  README.md  Realsense.cpp  Realsense.h  SUR40.cpp  SUR40.h  V4L2.cpp  V4L2.h  VirtualCam.cpp  VirtualCam.h  calibrator.py  common.cpp  common.h  configurations.ods  gstreamer.cpp  gstreamer.sh  k4a.cpp  kinect.cpp  logger.h  notes  realsense.cpp  rs.cpp  server.sh  sse_example.c  start_dual_sinks.sh  start_dual_src.sh  surfacecast.cpp  timer.cpp  timer.h  tracker.cpp  virtcam.cpp  webcam.cpp
attic/: README.md  design.md  detect_markers.cpp  gst-mixer-quit.sh  gst-play.sh  gst-shmsrc.sh  gst-sink.sh  gst-src.sh  paconfig.sh
cmake/: FindLIBJPEGTURBO.cmake  Findglog.cmake  LibFindMacros.cmake
config/: 99-camera-symlink.rules  modules.conf  pulseaudio.cfg  sink.desktop  source.desktop  swap.desktop  uvcvideo.conf  v4l2loopback-options.conf
include/: PlaneModel.h  SimpleRansac.h
protonect/: CMakeLists.txt  Protonect.cpp
scripts/: build_k4a_sdk.sh  dependencies.sh  example-src.sh  gst-mixer.py  gst-play.sh  gst-sink.py  gst-sink.sh  gst-src.sh  gst-virt-src.sh  gst_example.py  gstreamer.sh  init_k4a_sdk.sh  server.sh  simple-sink.sh  simple-src.sh  start-virtual-sink.sh  start-virtual-src.sh  start_dual_sinks.sh  start_dual_src.sh  windowfix.sh  windowswap.sh
src/: Calibrator.cpp  Calibrator.h  Camera.cpp  Camera.h  DepthCamera.cpp  DepthCamera.h  KinectAzure.cpp  KinectAzure.h  Libcamera.cpp  Libcamera.h  Realsense.cpp  Realsense.h  SUR40.cpp  SUR40.h  TuioOverlay.cpp  TuioOverlay.h  V4L2.cpp  V4L2.h  VirtualCam.cpp  VirtualCam.h  cv_overlay.h  surfacecast.cpp  surfacestreams.cpp
